tests/errors/first_stage/.entry/expected_arg/expected_arg.as
; expected an argument in .entry instruction
.entry